--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
+    "@mui/material": "^6.1.0",
+    "@mui/x-data-grid": "^7.16.0",
     "@mui/x-date-pickers": "^7.16.0",
+    "@toolpad/core": "^0.6.0",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
