--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.1.0",
-    "@mui/x-data-grid": "^7.16.0",
+    "@mui/toolpad-core": "^0.1.51",
+    "@mui/x-data-grid": "^7.17.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@toolpad/core": "^0.6.0",
+    "axios": "^1.7.7",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
