--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.1.0",
+    "@mui/material": "^6.1.3",
     "@mui/toolpad-core": "^0.1.51",
     "@mui/x-data-grid": "^7.17.0",
     "@mui/x-date-pickers": "^7.16.0",
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "firebase": "^10.14.1",
     "material-react-table": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
