--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^43.3.1",
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@ckeditor/ckeditor5-font": "^43.2.0",
     "@ckeditor/ckeditor5-react": "^9.3.1",
@@ -19,6 +20,7 @@
     "@toolpad/core": "^0.6.0",
     "axios": "^1.7.7",
     "cra-template": "1.2.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.1",
     "material-react-table": "^3.0.1",
