--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "@tanstack/react-query-devtools": "^5.59.15",
     "@toolpad/core": "^0.6.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.1",
     "material-react-table": "^3.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
