--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
