--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.3",
     "web-vitals": "^4.2.3"
   },
